--- a/daamduu_yemek_app/templates/daamduu_yemek_app/base.html
+++ b/daamduu_yemek_app/templates/daamduu_yemek_app/base.html
@@ -22,6 +22,11 @@
                     <a class="navbar-brand" href="{% url 'daamduu_yemek:index' %}">
                         <img id="logo-img" src="{% static 'images/Daamduu Tamak logo.png' %}" alt="logo" />
                     </a>
+                    <!-- Бургер-кнопка для мобильных -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
@@ -141,7 +146,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script>
         const lang = new URLSearchParams(window.location.search).get('lang') || 'kg';
